--- a/report/GoldarReport.html
+++ b/report/GoldarReport.html
@@ -29,7 +29,6 @@
 		<ul id='slide-out' class='side-nav fixed hide-on-med-and-down'>
 			<li class='waves-effect active'><a href='#!' view='test-view' onclick="configureView(0);chartsView('test');"><i class='material-icons'>dashboard</i></a></li>
 						<li class='waves-effect'><a href='#!' onclick="configureView(-1);chartsView('dashboard');" view='dashboard-view'><i class='material-icons'>track_changes</i></i></a></li>
-			<li class='waves-effect'><a href='#!' onclick="configureView(-1)" view='testrunner-logs-view'><i class='material-icons'>note</i></a></li>
 		</ul>
 
 		<!-- report name -->
@@ -41,7 +40,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-				<span class='label suite-start-time'>Apr 10, 2017 4:58:14 PM</span>
+				<span class='label suite-start-time'>Apr 13, 2017 11:26:00 PM</span>
 			</a>
 			<a href='#!'>
 				<span class='label'>v3.0.2</span>
@@ -149,30 +148,30 @@
 				<li class='test displayed active has-leaf pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>Google Search</span>
-						<span class='test-time'>Apr 10, 2017 4:58:14 PM</span>
+						<span class='test-time'>Apr 13, 2017 11:26:00 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Apr 10, 2017 4:58:14 PM</span>
-	<span class='label end-time'>Apr 10, 2017 4:58:19 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 4s+686ms</span>
+	<span class='label start-time'>Apr 13, 2017 11:26:00 PM</span>
+	<span class='label end-time'>Apr 13, 2017 11:26:05 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 4s+397ms</span>
 </div>
 	<ul class='collapsible node-list' data-collapsible='accordion'>
 		
 				<li class='node level-1  pass' status='pass' test-id='2'>
 					<div class='collapsible-header'>
 						<div class='node-name'>Scenario: Search Goldar Web Automation on Google</div>						
-						<span class='node-time'>Apr 10, 2017 4:58:14 PM</span>
-						<span class='node-duration'>0h 0m 4s+684ms</span>
+						<span class='node-time'>Apr 13, 2017 11:26:00 PM</span>
+						<span class='node-duration'>0h 0m 4s+393ms</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 						<ul class='collapsible node-list' data-collapsible='accordion'>
 				<li class='node level-2 leaf pass' status='pass' test-id='3'>
 					<div class='collapsible-header'>
 						<div class='node-name'>Given User Open browser and open "https://www.google.com"</div>						
-						<span class='node-time'>Apr 10, 2017 4:58:16 PM</span>
-						<span class='node-duration'>0h 0m 2s+433ms</span>
+						<span class='node-time'>Apr 13, 2017 11:26:02 PM</span>
+						<span class='node-duration'>0h 0m 2s+651ms</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 						<div class='collapsible-body'>
@@ -188,7 +187,7 @@
 										<tbody>
 												<tr class='log' status='pass'>
 													<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-													<td class='timestamp'>4:58:18 PM</td>
+													<td class='timestamp'>11:26:04 PM</td>
 													<td class='step-details'>passed</td>
 												</tr>
 										</tbody>
@@ -199,8 +198,8 @@
 				<li class='node level-2 leaf pass' status='pass' test-id='4'>
 					<div class='collapsible-header'>
 						<div class='node-name'>Then On Google Homepage type "Goldar Web Automation" and tap search</div>						
-						<span class='node-time'>Apr 10, 2017 4:58:18 PM</span>
-						<span class='node-duration'>0h 0m 0s+371ms</span>
+						<span class='node-time'>Apr 13, 2017 11:26:04 PM</span>
+						<span class='node-duration'>0h 0m 0s+370ms</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 						<div class='collapsible-body'>
@@ -216,7 +215,7 @@
 										<tbody>
 												<tr class='log' status='pass'>
 													<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-													<td class='timestamp'>4:58:19 PM</td>
+													<td class='timestamp'>11:26:05 PM</td>
 													<td class='step-details'>passed</td>
 												</tr>
 										</tbody>
@@ -273,19 +272,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Apr 10, 2017 4:58:14 PM</div>
+					<div class='panel-lead'>Apr 13, 2017 11:26:00 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Apr 10, 2017 4:58:19 PM</div>
+			 		<div class='panel-lead'>Apr 13, 2017 11:26:05 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>4,907ms</div>
+					<div class='panel-lead'>4,565ms</div>
 				</div>
 			</div>
 			<div class='col s4'>
@@ -311,16 +310,7 @@
 		</div>
 	</div>
 </div>
-<!-- dashboard view --><div id='testrunner-logs-view' class='view hide'>
-	<div class='card-panel transparent np-v'>
-		<h5>TestRunner Logs</h5>
-		
-		<div class='card-panel'>
-				Login Feature
-		</div>
-	</div>
-</div>
-<!-- testrunner-logs view -->
+<!-- dashboard view --><!-- testrunner-logs view -->
 		</div>
 		<!-- container -->
 
